--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,28 @@
 group 'SpringbootSample'
-version '1.0-SNAPSHOT'
+version '1.0'
+
+buildscript {
+    repositories {
+        maven { url "http://repo.spring.io/libs-snapshot" }
+        mavenLocal()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.0.0.RC1")
+    }
+}
 
 apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'spring-boot'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven { url "http://repo.spring.io/libs-snapshot" }
 }
 
 dependencies {
+    compile("org.springframework.boot:spring-boot-starter-web:1.0.0.RC1")
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
