--- a/build.gradle
+++ b/build.gradle
@@ -24,5 +24,8 @@ repositories {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web:1.0.0.RC1")
+    compile("org.springframework.boot:spring-boot-starter-jdbc:1.0.0.RC1")
+    compile("org.springframework:spring-jdbc:4.0.0.RELEASE")
+    compile("mysql:mysql-connector-java:5.1.40")
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
