--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/tf?useUnicode=true&charaterEnc
 spring.datasource.username=root
 spring.datasource.password=1
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+#for restapi : http://domain:port/api/xxxxx
+mangs.rest.api.path=api
+
