--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,9 @@ repositories {
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web:1.0.0.RC1")
-    compile("org.springframework.boot:spring-boot-starter-jdbc:1.0.0.RC1")
-    compile("org.springframework.boot:spring-boot-starter-data-rest:1.0.0.RELEASE")
+    compile("org.springframework.boot:spring-boot-starter-web:1.1.4.RELEASE")
+    compile("org.springframework.boot:spring-boot-starter-jdbc:1.1.4.RELEASE")
+    compile("org.springframework.boot:spring-boot-starter-data-rest:1.1.4.RELEASE")
     compile("org.springframework:spring-jdbc:4.0.0.RELEASE")
     compile("mysql:mysql-connector-java:5.1.40")
 
